# tbldo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/example-configs/: example1.csv  example2.csv  example2_final.csv  example3.csv  example3_final.csv  example4.csv  example4_final.csv
tbldo/: __main__.py
test/: run-tests.sh  test-delimiter-ampersand.csv  test-newline-ampersand.csv  test-quotechar-ampersand.csv  test.csv  test.db  test.sql
test/expected/: db-file-test.out  expected-quotechar.out
